[mr-47015575][refactoring] Fix import